<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false" tools:override="true">NaviBee</string>
    <string name="action_settings">Settings</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="action_log_out">Log out</string>
    <string name="app_version_short">α</string>
    <string name="landing_navigation">Get somewhere</string>
    <string name="landing_events">Events</string>
    <string name="landing_social">Friends</string>
    <string name="landing_sos">SOS</string>
    <string name="title_activity_sos">SOS Help</string>
    <string name="title_activity_event_detail">EventDetailActivity</string>
    <string name="navigation_search_hint">Where do you want to go?</string>
    <string name="search_button_text">Search</string>
    <string name="title_activity_friend">FriendActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="destination_search_result_title">We have found…</string>
    <string name="button_go">Go</string>
    <string name="button_retry">Try again</string>
    <string name="location_required_for_navigation">Location permission is required for navigation.</string>
    <string name="button_got_it">Got it</string>
    <string name="button_join">Join</string>
    <string name="button_send_message">Send message</string>
    <string name="chat_type_message_here">Type here…</string>
    <string name="chat_voice_call">Voice call</string>
    <string name="chat_realtime_location">Realtime location</string>
    <string name="chat_type_private">Private chat</string>
    <string name="chat_type_group">Group chat</string>
    <string name="chat_msg_type_event">Event invitation</string>
    <string name="chat_send_multimedia">Send…</string>
    <plurals name="chat_group_member_count">
        <item quantity="one">%1$d member</item>
        <item quantity="other">%1$d members</item>
    </plurals>
    <string name="message_type_photo">Photo</string>
    <string name="message_type_location">Location</string>
    <string name="friends_tab_chats">Chats</string>
    <string name="friends_tab_friends">Friends</string>
    <string name="message_type_voice_call">Voice call</string>
    <string name="friends_create_group">Create group</string>
    <string name="friends_add_friend">Add friend</string>
    <string name="chat_group_name">Group name</string>
    <string name="friend_added">%s is added as your friend.</string>
    <string name="friend_since">Friend since %s</string>
    <string name="chat_create_group_back_warning">Do you want to discard your changes?</string>
    <string name="action_discard">Discard</string>
    <string name="action_keep">Keep</string>
    <string name="chat_delete_friend">Do you want to remove %s from friends?</string>
    <string name="action_remove">Remove</string>
    <string name="chat_group_created_at">Created %s</string>
    <string name="chat_group_create_friend_required">At least one friend should be selected.</string>
    <string name="chat_group_delete">Dismiss group</string>
    <string name="user_profile_subtitle">A proud NaviBee user.</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_dismiss">Dismiss</string>
    <string name="action_ok">OK</string>
    <string name="chat_group_deleted">Sorry, this group is dismissed by the creator.</string>
    <string name="chat_group_delete_confirm">Do you want to dismiss this group?</string>
    <string name="profile_send_message">Send message</string>
    <string name="profile_delete_friend">Delete friend</string>
    <string name="profile_add_friend">Add friend</string>
    <string name="sos_btn">Call</string>
    <string name="sos_setting">SOS Setting</string>
    <string name="sos_setting_btn">Save</string>
    <string name="button_yes">Yes</string>
    <string name="button_ok">Ok</string>
    <string name="button_cancel">Cancel</string>
    <string name="voice_recognition_result_check_title">Did you say…?</string>
    <string name="fail_to_get_last_location">Failed to get your current location. Please retry later in a more open place with your GPS settings turned on.</string>
    <string name="destination_search_no_result">We found no place matching your search. Please try rephrase your keyword.</string>
    <string name="destination_not_found">This place is not found in our database.</string>
    <string name="destination_search_failed">Failed to process this search. Please check your internet connection.</string>
    <string name="search_result_attributions">Attributions given to:</string>
    <string name="prompt_loading">Loading…</string>
    <string name="place_type_accounting">Accounting</string>
    <string name="place_type_administrative_area_level_1">Administrative Area Level 1</string>
    <string name="place_type_administrative_area_level_2">Administrative Area Level 2</string>
    <string name="place_type_administrative_area_level_3">Administrative Area Level 3</string>
    <string name="place_type_airport">Airport</string>
    <string name="place_type_amusement_park">Amusement Park</string>
    <string name="place_type_aquarium">Aquarium</string>
    <string name="place_type_art_gallery">Art Gallery</string>
    <string name="place_type_atm">Atm</string>
    <string name="place_type_bakery">Bakery</string>
    <string name="place_type_bank">Bank</string>
    <string name="place_type_bar">Bar</string>
    <string name="place_type_beauty_salon">Beauty Salon</string>
    <string name="place_type_bicycle_store">Bicycle Store</string>
    <string name="place_type_book_store">Book Store</string>
    <string name="place_type_bowling_alley">Bowling Alley</string>
    <string name="place_type_bus_station">Bus Station</string>
    <string name="place_type_cafe">Cafe</string>
    <string name="place_type_campground">Campground</string>
    <string name="place_type_car_dealer">Car Dealer</string>
    <string name="place_type_car_rental">Car Rental</string>
    <string name="place_type_car_repair">Car Repair</string>
    <string name="place_type_car_wash">Car Wash</string>
    <string name="place_type_casino">Casino</string>
    <string name="place_type_cemetery">Cemetery</string>
    <string name="place_type_church">Church</string>
    <string name="place_type_city_hall">City Hall</string>
    <string name="place_type_clothing_store">Clothing Store</string>
    <string name="place_type_colloquial_area">Colloquial Area</string>
    <string name="place_type_convenience_store">Convenience Store</string>
    <string name="place_type_country">Country</string>
    <string name="place_type_courthouse">Courthouse</string>
    <string name="place_type_dentist">Dentist</string>
    <string name="place_type_department_store">Department Store</string>
    <string name="place_type_doctor">Doctor</string>
    <string name="place_type_electrician">Electrician</string>
    <string name="place_type_electronics_store">Electronics Store</string>
    <string name="place_type_embassy">Embassy</string>
    <string name="place_type_establishment">Establishment</string>
    <string name="place_type_finance">Finance</string>
    <string name="place_type_fire_station">Fire Station</string>
    <string name="place_type_floor">Floor</string>
    <string name="place_type_florist">Florist</string>
    <string name="place_type_food">Food</string>
    <string name="place_type_funeral_home">Funeral Home</string>
    <string name="place_type_furniture_store">Furniture Store</string>
    <string name="place_type_gas_station">Gas Station</string>
    <string name="place_type_general_contractor">General Contractor</string>
    <string name="place_type_geocode">Geocode</string>
    <string name="place_type_grocery_or_supermarket">Grocery Or Supermarket</string>
    <string name="place_type_gym">Gym</string>
    <string name="place_type_hair_care">Hair Care</string>
    <string name="place_type_hardware_store">Hardware Store</string>
    <string name="place_type_health">Health</string>
    <string name="place_type_hindu_temple">Hindu Temple</string>
    <string name="place_type_home_goods_store">Home Goods Store</string>
    <string name="place_type_hospital">Hospital</string>
    <string name="place_type_insurance_agency">Insurance Agency</string>
    <string name="place_type_intersection">Intersection</string>
    <string name="place_type_jewelry_store">Jewelry Store</string>
    <string name="place_type_laundry">Laundry</string>
    <string name="place_type_lawyer">Lawyer</string>
    <string name="place_type_library">Library</string>
    <string name="place_type_liquor_store">Liquor Store</string>
    <string name="place_type_locality">Locality</string>
    <string name="place_type_local_government_office">Local Government Office</string>
    <string name="place_type_locksmith">Locksmith</string>
    <string name="place_type_lodging">Lodging</string>
    <string name="place_type_meal_delivery">Meal Delivery</string>
    <string name="place_type_meal_takeaway">Meal Takeaway</string>
    <string name="place_type_mosque">Mosque</string>
    <string name="place_type_movie_rental">Movie Rental</string>
    <string name="place_type_movie_theater">Movie Theater</string>
    <string name="place_type_moving_company">Moving Company</string>
    <string name="place_type_museum">Museum</string>
    <string name="place_type_natural_feature">Natural Feature</string>
    <string name="place_type_neighborhood">Neighborhood</string>
    <string name="place_type_night_club">Night Club</string>
    <string name="place_type_other">Other</string>
    <string name="place_type_painter">Painter</string>
    <string name="place_type_park">Park</string>
    <string name="event_create_location">Location</string>
    <string name="event_create_time">Time</string>
    <string name="event_create_participants">Participants</string>
    <string name="dialog_method_of_travel_title">Select a method of travel…</string>
    <string name="dialog_method_of_travel_alt">Or navigate with…</string>
    <string name="dialog_method_of_travel_driving">Driving</string>
    <string name="dialog_method_of_travel_walking">Walking</string>
    <string name="dialog_method_of_travel_transit">Public transport</string>
    <string name="action_just_once">Just once</string>
    <string name="action_always">Always</string>
    <string name="pref_section_title_navigation">Navigation</string>
    <string name="pref_navigation_preferred_mean_of_transport">Preferred mean of transport</string>
    <string name="pref_navigation_preferred_mean_of_transport_default" translatable="false">always_ask</string>
    <string name="pref_navigation_search_region">Country/region of search</string>
    <string name="pref_navigation_search_region_summary">Default region to search when location service is not available.</string>
    <string name="pref_navigation_search_region_values_default" translatable="false">au</string>
    <string name="pref_navigation_show_street_view">Show street view in driving/walking navigation</string>
    <string name="pref_navigation_show_street_view_on">Will show street view overlay</string>
    <string name="pref_navigation_show_street_view_off">Will not show street view overlay</string>
    <string name="pref_section_title_developer_options">Developer options</string>
    <string name="pref_developer_options_navigation_emulation">Enable navigation emulation</string>
    <string name="pref_section_title_sos">SOS</string>
    <string name="pref_sos_preferred_emergency_call">Preferred emergency call number</string>
    <string name="sos_pre_text">We\'ve detected that you might be in danger\.</string>
    <string name="sos_main_text">Your emergency contact will be notified in</string>
    <string name="sos_time_unit">seconds</string>
    <string name="sos_notify_text">Notify Now</string>
</resources>