<?xml version="1.0" encoding="utf-8"?>

<FrameLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:id="@+id/event_root_view">

    <LinearLayout
        android:layout_weight="1"
        android:id="@+id/eventMainLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ScrollView
            android:layout_weight="1"
            android:id="@+id/eventScrollView"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/eventLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/form_bottom_padding">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/eventName"
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:ems="10"
                        android:hint="Event Name"
                        android:inputType="textPersonName"
                        android:padding="@dimen/form_bottom_padding"
                        android:textSize="32sp" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/form_bottom_padding">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_create_participants"
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:ems="10"
                        android:hint="@string/event_create_participants"
                        android:padding="@dimen/form_bottom_padding"
                        android:textSize="32sp"
                        android:inputType="textNoSuggestions|textMultiLine"
                        android:focusableInTouchMode="false"
                        android:onClick="onInviteFriendClicked"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/form_bottom_padding">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_create_location"
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:ems="10"
                        android:hint="@string/event_create_location"
                        android:padding="@dimen/form_bottom_padding"
                        android:inputType="textNoSuggestions|textMultiLine"
                        android:textSize="32sp"
                        android:focusableInTouchMode="false"
                        android:onClick="showPlacePicker"/>

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/form_bottom_padding">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/event_create_time"
                        style="@style/Widget.MaterialComponents.TextInputEditText.OutlinedBox"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollHorizontally="false"
                        android:ems="10"
                        android:hint="@string/event_create_time"
                        android:padding="@dimen/form_bottom_padding"
                        android:textSize="32sp"
                        android:inputType="textNoSuggestions|textMultiLine"
                        android:focusableInTouchMode="false"
                        android:onClick="showDatePickerDialog"/>

                </com.google.android.material.textfield.TextInputLayout>

                <!--<TextView-->
                    <!--android:id="@+id/eventPicsName"-->
                    <!--android:layout_width="match_parent"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:layout_margin="4dp"-->
                    <!--android:text="Photos"-->
                    <!--android:textSize="32dp" />-->

                <GridView
                    android:id="@+id/eventPics"
                    android:layout_width="match_parent"
                    android:layout_height="267dp"
                    android:layout_margin="@dimen/form_bottom_padding" />

            </LinearLayout>
        </ScrollView>

        <com.google.android.material.button.MaterialButton
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:id="@+id/eventPublish"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/form_bottom_padding"
            android:onClick="onPublishClicked"
            android:textColor="#808080"
            android:textSize="40sp"
            android:text="Publish" />

    </LinearLayout>

    <ProgressBar
        android:layout_gravity = "center"
        android:id="@+id/event_indefinite_progress"
        style="?android:attr/progressBarStyle"
        android:layout_width="72dp"
        android:layout_height="72dp" />

</FrameLayout>

